Fixes broken scrolling on mobile devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ h1 {
 }
 
 h2 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-top: 1rem;
 }
 
